--- a/examples/react-router/package.json
+++ b/examples/react-router/package.json
@@ -2,7 +2,7 @@
   "name": "react-router",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor --settings settings.json"
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
