--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "mocha": "2.x.x",
+    "mock-browser": "^0.92.12",
     "nodemon": "1.7.x"
   },
   "dependencies": {
