Changed npm package name to okgrow-auto-analytics
   README.md
   examples/react-router/client/main.jsx
   examples/react-router/package.json
   package.json
   src/__tests__/index.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "okgrow-analytics",
+  "name": "okgrow-auto-analytics",
   "version": "1.0.0",
   "description": "Complete automatic pageview tracking with Google Analytics, Mixpanel, KISSmetrics (and more) integration for JavaScript applications.",
   "repository": {
