--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "okgrow-auto-analytics",
-  "version": "1.0.0",
+  "name": "@okgrow/auto-analytics",
+  "version": "1.0.1",
   "description": "Complete automatic pageview tracking with Google Analytics, Mixpanel, KISSmetrics (and more) integration for JavaScript applications.",
   "repository": {
     "type": "git",
