--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "options": {
     "mocha": "--require scripts/mocha_runner src/**/__tests__/**/*.js"
   },
+  "bugs": "https://github.com/okgrow/auto-analytics/issues",
+  "homepage": "https://github.com/okgrow/auto-analytics",
+  "keywords": ["javascript", "analytics", "google-analytics", "segment", "kissmetrics", "mixpanel"],
   "scripts": {
     "prepublish": ". ./scripts/prepublish.sh",
     "lint": "eslint ./src",
