--- a/examples/react-router/package.json
+++ b/examples/react-router/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.4.2",
     "react-komposer": "^2.0.0",
     "react-router": "^3.0.2",
-    "@okgrow/auto-analytics": "^1.0.2"
+    "@okgrow/auto-analytics": "^2.0.0",
+    "analytics.js": "^2.9.1"
   }
 }
