--- a/examples/react-router/package.json
+++ b/examples/react-router/package.json
@@ -10,9 +10,7 @@
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-komposer": "^2.0.0",
     "react-router": "^3.0.2",
-    "@okgrow/auto-analytics": "^2.0.0",
-    "analytics.js": "^2.9.1"
+    "@okgrow/auto-analytics": "^2.0.0"
   }
 }
