--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "url": "https://github.com/okgrow/auto-analytics.git"
   },
   "license": "MIT",
-  "options": {
-    "mocha": "--require scripts/mocha_runner src/**/__tests__/**/*.js"
-  },
   "bugs": "https://github.com/okgrow/auto-analytics/issues",
   "homepage": "https://github.com/okgrow/auto-analytics",
   "keywords": [
@@ -24,7 +21,7 @@
     "prepublish": ". ./scripts/prepublish.sh",
     "lint": "eslint ./src",
     "lintfix": "eslint ./src --fix",
-    "testonly": "mocha $npm_package_options_mocha",
+    "testonly": "jest",
     "test": "npm run lint && npm run testonly",
     "test-watch": "npm run testonly -- --watch --watch-extensions js",
     "start": "babel src -d dist --watch"
@@ -37,7 +34,6 @@
     "babel-polyfill": "6.x.x",
     "babel-preset-es2015": "6.x.x",
     "babel-preset-stage-2": "6.x.x",
-    "chai": "3.x.x",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-config-airbnb-base": "^11.0.1",
@@ -46,9 +42,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "mocha": "3.x.x",
-    "mock-browser": "^0.92.12",
-    "nodemon": "1.11.x"
+    "jest": "^21.1.0"
   },
   "dependencies": {}
 }
