chore: switch npm script to using prepare instead of prepublish

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mixpanel"
   ],
   "scripts": {
-    "prepublish": ". ./scripts/prepublish.sh",
+    "prepare": ". ./scripts/prepublish.sh",
     "lint": "eslint ./src",
     "lintfix": "eslint ./src --fix",
     "testonly": "jest",
