--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test-watch": "npm run testonly -- --watch --watch-extensions js",
     "start": "babel src -d dist --watch"
   },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
@@ -34,15 +35,9 @@
     "babel-polyfill": "6.x.x",
     "babel-preset-es2015": "6.x.x",
     "babel-preset-stage-2": "6.x.x",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-config-airbnb-base": "^11.0.1",
-    "eslint-import-resolver-meteor": "^0.3.4",
-    "eslint-plugin-babel": "4.x.x",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
     "jest": "^21.1.0"
-  },
-  "dependencies": {}
+  }
 }
