--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,22 @@
 {
-  "presets": ["es2015", "stage-2"]
+  "env": {
+    "build": {
+      "presets": [
+        [
+          "es2015",
+          {
+            "modules": false
+          }
+        ],
+        "stage-2"
+      ]
+    },
+    "test": {
+      "presets": [
+        "es2015",
+        "stage-2"
+      ]
+    }
+  }
+
 }
