--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/okgrow/auto-analytics.git"
   },
   "license": "MIT",
+  "main": "dist/index.umd.js",
   "bugs": "https://github.com/okgrow/auto-analytics/issues",
   "homepage": "https://github.com/okgrow/auto-analytics",
   "keywords": [
@@ -18,26 +19,33 @@
     "mixpanel"
   ],
   "scripts": {
-    "prepare": ". ./scripts/prepublish.sh",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run lint && npm test",
     "lint": "eslint ./src",
     "lintfix": "eslint ./src --fix",
-    "testonly": "jest",
-    "test": "npm run lint && npm run testonly",
-    "test-watch": "npm run testonly -- --watch --watch-extensions js",
-    "start": "babel src -d dist --watch"
+    "build": "BABEL_ENV=build rollup -c",
+    "pretest": "npm run build",
+    "test": "jest",
+    "test-watch": "npm run testonly -- --watch --watch-extensions js"
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-cli": "6.x.x",
-    "babel-core": "6.x.x",
-    "babel-eslint": "7.x.x",
-    "babel-plugin-transform-runtime": "6.x.x",
-    "babel-polyfill": "6.x.x",
-    "babel-preset-es2015": "6.x.x",
-    "babel-preset-stage-2": "6.x.x",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "eslint": "^4.7.2",
-    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-config-airbnb-base": "^12.0.1",
     "eslint-plugin-import": "^2.7.0",
-    "jest": "^21.1.0"
-  }
+    "jest": "^21.2.1",
+    "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-filesize": "^1.4.2",
+    "rollup-plugin-uglify": "^2.0.1",
+    "uglify-es": "^3.1.2"
+  },
+  "files": [
+    "dist"
+  ]
 }
