--- a/examples/react-router/package.json
+++ b/examples/react-router/package.json
@@ -5,13 +5,14 @@
     "start": "meteor --settings settings.json"
   },
   "dependencies": {
+    "@okgrow/auto-analytics": "^2.0.0",
     "babel-runtime": "6.18.0",
     "classnames": "^2.2.5",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "@okgrow/auto-analytics": "^1.0.0"
+    "react-helmet": "^5.2.0",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^4.7.2",
