--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "main": "dist/index.umd.js",
+  "module": "dist/index.esm.js",
   "bugs": "https://github.com/okgrow/auto-analytics/issues",
   "homepage": "https://github.com/okgrow/auto-analytics",
   "keywords": [
